Color and Text Changes

--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Grace Cao</h1>
+<p>Year: Freshman</p>
+<p>School: University of Illinois at Urbana-Champaign</p>
+<p>Major: Computer Science and Statistics</p>
 
 </body>
 </html>
