--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body style=“color:blue;”>
+<body style=“color:#FFB6C1;”>
 
 <h1>Grace Cao</h1>
 <p>Year: Freshman</p>
