--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style=“background-color:#FFB6C1;”>
+<body>
 
 <h1>Grace Cao</h1>
 <p>Year: Freshman</p>
