--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://gracecao816.github.io/style.css">
+  <link rel="stylesheet" href=“{{style.css}}”>
 </head>
 <body>
 
@@ -12,3 +12,4 @@
 
 </body>
 </html>
+
